Fixed model creation and user task form editpr
